--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ terraform-lambda-deployment/aws_gdpr_guard_layer.zip
 
 terraform-ec2-deployment/terraform.tfvars
 terraform-ec2-deployment/aws_gdpr_guard.zip
+terraform-ec2-deployment/keys/
