--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,23 @@ boto3==1.40.40
 botocore==1.40.40
 CacheControl==0.14.3
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
 coverage==7.10.7
+cryptography==46.0.2
 cyclonedx-python-lib==9.1.0
 defusedxml==0.7.1
 filelock==3.19.1
 idna==3.10
 iniconfig==2.1.0
+Jinja2==3.1.6
 jmespath==1.0.1
 license-expression==30.4.4
 markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 mdurl==0.1.2
+moto==5.1.14
 msgpack==1.1.1
 mypy_extensions==1.1.0
 numpy==2.3.3
@@ -31,6 +36,7 @@ platformdirs==4.4.0
 pluggy==1.6.0
 py-serializable==2.1.0
 pyarrow==21.0.0
+pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
 pytest==8.4.2
@@ -40,6 +46,7 @@ pytokens==0.1.10
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
+responses==0.25.8
 rich==14.1.0
 s3transfer==0.14.0
 six==1.17.0
@@ -48,3 +55,5 @@ stevedore==5.5.0
 toml==0.10.2
 tzdata==2025.2
 urllib3==2.5.0
+Werkzeug==3.1.3
+xmltodict==1.0.2
