--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,12 @@ jobs:
     steps:
       - name: Checkout and clone repo
         uses: actions/checkout@v4
-      - name: setup python
+      - name: Setup python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'   
+          python-version: '3.13'
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip setuptools wheel
       - name: Setup
         run: make setup
       - name: Run checks
